fix z-index

--- a/softWrench.sW4.Web/Content/styles/default/_crud-fields.scss
+++ b/softWrench.sW4.Web/Content/styles/default/_crud-fields.scss
@@ -394,7 +394,6 @@ input[type="date"], input[type="time"] {
         position: absolute;
         bottom: 0;
         left: 20px;
-        z-index: 999;
         padding: 10px;
         background-color: $cts-gray;
 
